# serdde

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE-MIT  README.md  dudu.toml
benchmarks/: cpp_json.cpp
benchmarks/cpp/: CMakeLists.txt  benchmark_alloc.cpp  benchmark_fixture_json.cpp  benchmark_fixture_json.hpp  benchmark_runtime.hpp  benchmark_schemas.hpp  glaze_backend.cpp  nlohmann_backend.cpp  rapidjson_backend.cpp  rapidjson_codec.hpp  rapidjson_decode.cpp  rapidjson_encode.cpp  simdjson_backend.cpp  simdjson_codec.cpp  simdjson_codec.hpp  yyjson_backend.cpp  yyjson_codec.cpp  yyjson_codec.hpp
benchmarks/dudu/: dudu.toml
benchmarks/dudu/src/: benchmark_clock.hpp  benchmark_native.cpp  benchmark_native.hpp  main.dd  schemas.dd
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: main.rs
docs/: api.md  architecture.md  benchmarks.md  configuration.md  direct-wire-plan.md  dson.md  editor.md  generated-code.md  schema-evolution.md
examples/: basic.dd  configuration.dd  editor_fixture.dd  formats.dd  native_adapter.dd
interop/rust_cbor/: Cargo.toml
interop/rust_cbor/src/: main.rs
scripts/: bench_json.sh  bench_wire.py  bench_wire.sh  test_all.sh  test_cbor_interop.sh  test_cmake.sh  test_compile_fail.sh  test_generated_direct.sh  test_package_consumers.sh
src/: derive_main.dd  serdde.dd  test_main.dd
src/serdde/: cbor.dd  cbor_value.dd  cbor_wire_common.hpp  cbor_wire_reader.hpp  cbor_wire_writer.hpp  convert.dd  defaults.dd  dson.dd  dson_parser.dd  dson_value.dd  dson_wire_reader.hpp  dson_wire_writer.hpp  dson_writer.dd  error.dd  format_support.dd  json.dd  json_native.hpp  json_parser.dd  json_value.dd  json_wire_document.hpp  json_wire_location.hpp  json_wire_native.hpp  json_wire_writer.hpp  json_writer.dd  macro_adapter.dd  macro_class_direct.dd  macro_class_direct_decode.dd  macro_class_direct_encode.dd  macro_class_direct_support.dd  macro_codec.dd  macro_codec_decode.dd  macro_codec_encode.dd  macro_codec_support.dd  macro_config.dd  macro_enum_decode.dd  macro_enum_direct_decode.dd  macro_enum_direct_encode.dd  macro_enum_encode.dd  macro_enum_support.dd  macro_support.dd  (+6 more)
tests/: adapter_main.dd  cbor_conformance_main.dd  cbor_features_main.dd  cbor_main.dd  cbor_test_native.hpp  config_main.dd  direct_protocol_probe.dd  dson_main.dd  enum_main.dd  generic_main.dd  json_main.dd  json_test_native.hpp  recursive_main.dd  variant_main.dd
tests/compile_fail/: compact_duplicate_id.dd  compact_flatten.dd  compact_missing_id.dd  default_conflict.dd  duplicate_name.dd  flatten_unknown.dd  id_without_compact.dd  invalid_rename.dd  skipped_required.dd  variant_duplicate.dd
tests/package_consumer/: main.dd
